--- a/source/index.html.haml
+++ b/source/index.html.haml
@@ -74,7 +74,7 @@ title: Demuxed 2020
           October 27th, 28th, & 29th 2020
 
       %div.days
-        = link_to "Tuesday 27th", "", :class => "schedule__day-switcher"
+        -# = link_to "Tuesday 27th", "", :class => "schedule__day-switcher"
 
         %ul.day.tuesday
           %li
