--- a/source/partials/_schedule-entry.haml
+++ b/source/partials/_schedule-entry.haml
@@ -28,7 +28,7 @@
         #{session.start} - #{session.end}
       %h4.talk__name
         Matthew McClure
-      %a.talk__desc{}
+      %a.title__desc{}
         = session.title
 - elsif session.title == 'Lightning Talks'
   %li.talk
@@ -50,7 +50,7 @@
         #{session.start} - #{session.end}
       %h4.talk__name
         Mystery Guest
-      %a.talk__desc{}
+      %a.title__desc{}
         ?
 - elsif session.title == 'Break'
   %li.break
