Add lightning talk submission link

--- a/source/partials/_schedule-entry.haml
+++ b/source/partials/_schedule-entry.haml
@@ -39,7 +39,7 @@
         #{session.start} - #{session.end}
       %h4.talk__name
         Lightning Talks
-      %a.talk__desc{}
+      %a.talk__desc{href: 'https://airtable.com/shrbpxXgBswidfYSW', target: '_blank'}
         Submit your lightning talks here!
 - elsif session.title == 'Surprise'
   %li.talk
