Nearly forgot timezones!

--- a/source/index.html.haml
+++ b/source/index.html.haml
@@ -72,6 +72,8 @@ title: Demuxed 2020
         The Schedule
         %span
           October 27th, 28th, & 29th 2020
+        %span.timezones
+          All times are shown in Pacific Daylight Time (GMT-7)
 
       %div.days
         -# = link_to "Tuesday 27th", "", :class => "schedule__day-switcher"
