--- a/source/stylesheets/components/_core.scss
+++ b/source/stylesheets/components/_core.scss
@@ -123,8 +123,34 @@ h1, h2, h3, h4, h5 {
       color: $brand-yellow;
       text-transform: capitalize;
       font-weight: 500;
-      margin: 0.2em 0 1.6em;
+      margin: 0.2em 0 1em;
       font-size: clamp(1.6rem, 2vw, 2.1rem)!important;
+  }
+
+  span.timezones {
+    /*font clamp fallbacks*/
+      font-size: 3vw;
+
+      @include mq($small) {
+        font-size: 2.5vw;
+      }
+
+      @include mq($medium) {
+        font-size: 1.5vw;
+      }
+
+      @include mq($large) {
+        font-size: 1vw;
+      }
+    /*font clamp fallbacks*/
+
+      font-family: $default-sans;
+      display: block;
+      color: #fff;
+      text-transform: capitalize;
+      font-weight: 500;
+      margin: 0.2em 0 1.6em;
+      font-size: clamp(1rem, 1.5vw, 1.6rem)!important;
   }
 }
 
