--- a/source/layouts/layout.haml
+++ b/source/layouts/layout.haml
@@ -24,10 +24,13 @@
       %div.main-content
         = yield
 
-      = partial(:talks)
+      - data.talks.each do |talk|
+        = partial('_talks', locals: {talk: talk, speakers: data.speakers})
+      
       = partial(:footer)
 
-    = javascript_include_tag(:mobilemenu)
+    = javascript_include_tag :mobilemenu
+    = javascript_include_tag :all
 
     - unless current_page.data.include_javascripts.nil?
       - current_page.data.include_javascripts.each do |js|
