create a /live route for the stage

--- a/source/stylesheets/site.css.scss
+++ b/source/stylesheets/site.css.scss
@@ -16,3 +16,6 @@
 @import "components/footer";
 @import "components/url-styles";
 @import "components/js";
+
+/* live page */
+@import "components/live";
