--- a/source/live.html.haml
+++ b/source/live.html.haml
@@ -2,6 +2,12 @@
 title: Demuxed 2020
 ---
 
-%section.live-embed
-  // %iframe{:src => "http://localhost:3000"}
-  %iframe{:src => "https://live-2020-demuxed-com.vercel.app/"}
+%section.live-embed#js-live-embed
+  // %iframe{:src => "https://live-2020-demuxed-com.vercel.app/"}
+:javascript
+  var section = document.getElementById('js-live-embed');
+  var iframe = document.createElement('iframe');
+  var search = window.location.search || '';
+  // iframe.setAttribute('src', 'https://live-2020-demuxed-com.vercel.app/' + search);
+  iframe.setAttribute('src', 'http://localhost:3000/' + search);
+  section.appendChild(iframe);
