--- a/source/live.html.haml
+++ b/source/live.html.haml
@@ -8,6 +8,6 @@ title: Demuxed 2020
   var section = document.getElementById('js-live-embed');
   var iframe = document.createElement('iframe');
   var search = window.location.search || '';
-  // iframe.setAttribute('src', 'https://live-2020-demuxed-com.vercel.app/' + search);
-  iframe.setAttribute('src', 'http://localhost:3000/' + search);
+  iframe.setAttribute('src', 'https://live-2020-demuxed-com.vercel.app/' + search);
+  // iframe.setAttribute('src', 'http://localhost:3000/' + search);
   section.appendChild(iframe);
