point to friday-fixups PR

--- a/source/live.html.haml
+++ b/source/live.html.haml
@@ -12,5 +12,5 @@ title: Demuxed 2020
   iframe.setAttribute('src', 'http://localhost:3000/' + search);
   iframe.setAttribute('height', window.innerHeight - 200); // subtract 200 for the top nav and the bottom line of the footer
   // iframe.setAttribute('scrolling', 'no');
-  // iframe.setAttribute('src', 'https://live-2020-demuxed-com-git-dj-friday-fixups.demuxed.vercel.app/' + search);
+  iframe.setAttribute('src', 'https://live-2020-demuxed-com-git-dj-friday-fixups.demuxed.vercel.app/' + search);
   section.appendChild(iframe);
