--- a/source/live.html.haml
+++ b/source/live.html.haml
@@ -8,9 +8,23 @@ title: Demuxed 2020
   var section = document.getElementById('js-live-embed');
   var iframe = document.createElement('iframe');
   var search = window.location.search || '';
+  var mq = {
+    xs: 0,
+    sm: 576,
+    md: 768,
+    lg: 992,
+    xl: 1200,
+    '2xl': 1300,
+    '3xl': 1500,
+  };
   // iframe.setAttribute('src', 'https://live-2020-demuxed-com.vercel.app/' + search);
-  iframe.setAttribute('src', 'http://localhost:3000/' + search);
-  iframe.setAttribute('height', window.innerHeight - 200); // subtract 200 for the top nav and the bottom line of the footer
+  iframe.setAttribute('src', 'https://live-2020-demuxed-com-git-dj-responsive.demuxed.vercel.app/' + search);
+  // iframe.setAttribute('src', 'http://localhost:3000/' + search);
+  var height = window.innerHeight;
+  if (height < mq.md) {
+    iframe.setAttribute('height', '1200'); // subtract 200 for the top nav and the bottom line of the footer
+  } else {
+    iframe.setAttribute('height', height - 200); // subtract 200 for the top nav and the bottom line of the footer
+  }
   // iframe.setAttribute('scrolling', 'no');
-  iframe.setAttribute('src', 'https://live-2020-demuxed-com-git-dj-friday-fixups.demuxed.vercel.app/' + search);
   section.appendChild(iframe);
