--- a/source/partials/_schedule-entry.haml
+++ b/source/partials/_schedule-entry.haml
@@ -72,7 +72,7 @@
         #{session.start} - #{session.end}
       %h4.talk__name
         Women in Streaming Media Networking
-      %a.talk__desc{href: 'https://airtable.com/shrbpxXgBswidfYSW', target: '_blank'}
+      %a.talk__desc{href: 'https://airtable.com/shrydIgm011Sggtde', target: '_blank'}
         A networking event for all attendees who identify as women. RSVP here!
 - elsif session.title == 'Break'
   %li.break
