--- a/source/_talks.haml
+++ b/source/_talks.haml
@@ -33,4 +33,4 @@
         %h3.speakers-list__name= 'Diane Strutner'
         %h4.speakers-list__company= 'Datazoom'
     %h3.talk-title= 'Women in Streaming Media Round Table'
-    %p.talk-description= 'Alicia and Diane join Phil and Matt for a chat about the Women in Streaming Media group.<br /><br /> The Women in Streaming Media (WSM), a group for women in the streaming media technology space, whose mission is to increase diversity and give more visibility to women leaders within the streaming media industry.'
+    %p.talk-description= 'Alicia and Diane join Phil and Matt for a chat about the Women in Streaming Media group.<br><br> The Women in Streaming Media (WSM), a group for women in the streaming media technology space, whose mission is to increase diversity and give more visibility to women leaders within the streaming media industry.'
