--- a/source/live.html.haml
+++ b/source/live.html.haml
@@ -30,8 +30,8 @@ title: Demuxed 2020
       iframe.setAttribute('height', height - 100); // subtract a bit for the top nav and bottom footer
     }
   }
-  // iframe.setAttribute('src', 'https://live-2020-demuxed-com.vercel.app/' + search);
-  iframe.setAttribute('src', 'https://live-2020-demuxed-com-git-stylez.demuxed.vercel.app/' + search);
+  iframe.setAttribute('src', 'https://live-2020-demuxed-com.vercel.app/' + search);
+  // iframe.setAttribute('src', 'https://live-2020-demuxed-com-git-stylez.demuxed.vercel.app/' + search);
   // iframe.setAttribute('src', 'http://localhost:3000/' + search);
   section.appendChild(iframe);
 
