Watch live links!

--- a/source/_header.haml
+++ b/source/_header.haml
@@ -7,6 +7,8 @@
     %nav#js-main-nav.page-head__nav
       %ul
         %li.nav-item
+          = link_to "Watch live!", "/live"
+        %li.nav-item
           = link_to "Why watch", "/#why-watch"
         %li.nav-item
           = link_to "Speakers", "/#speakers"
