--- a/source/index.html.haml
+++ b/source/index.html.haml
@@ -13,7 +13,7 @@ title: Demuxed 2020
         October 27th-29th 2020, The Internet.
       %div.hero__btn-group
         = link_to "Buy tickets", "https://tickets.demuxed.com", :class => "hero__btn buy-tickets"
-        -# = link_to "Mailing list", "#", :class => "hero__btn mailing-list"
+        = link_to "Watch Live!", "/live", :class => "hero__btn mailing-list"
 
     = image_tag "/images/svg/hero-mobile.svg", :alt => "", :class => "hero__img-mobile"
     = image_tag "/images/svg/top-bg.svg", :alt => "", :class => "hero__img"
