--- a/source/live.html.haml
+++ b/source/live.html.haml
@@ -29,7 +29,7 @@ title: Demuxed 2020
       iframe.setAttribute('height', height - 100); // subtract a bit for the top nav and bottom footer
     }
   }
-  iframe.setAttribute('src', 'https://live-2020-demuxed-com.vercel.app/' + search);
+  iframe.setAttribute('src', 'https://live-2020-demuxed-com-git-stylez.vercel.app/' + search);
   section.appendChild(iframe);
 
   setHeight();
