Updated WISM logos

--- a/source/partials/_schedule-entry.haml
+++ b/source/partials/_schedule-entry.haml
@@ -55,7 +55,7 @@
 - elsif session.title == 'WISM Round Table'
   %li.talk
     %div.talk__img
-      = image_tag("https://demuxed-speakers-2020.imgix.net/wism-2.jpg?w=170&h=240&auto=format,compress&q=70", alt: "", class: "schedule-list__img")
+      = image_tag("https://demuxed-speakers-2020.imgix.net/wism-12.png?w=170&h=240&auto=format,compress&q=70", alt: "", class: "schedule-list__img")
     %div.talk__text
       %h4.talk__time
         #{session.start} - #{session.end}
@@ -66,7 +66,7 @@
 - elsif session.title == 'WISM Networking'
   %li.talk
     %div.talk__img
-      = image_tag("https://demuxed-speakers-2020.imgix.net/wism-2.jpg?w=170&h=240&auto=format,compress&q=70", alt: "", class: "schedule-list__img")
+      = image_tag("https://demuxed-speakers-2020.imgix.net/wism-12.png?w=170&h=240&auto=format,compress&q=70", alt: "", class: "schedule-list__img")
     %div.talk__text
       %h4.talk__time
         #{session.start} - #{session.end}
