point to different staging

--- a/source/live.html.haml
+++ b/source/live.html.haml
@@ -29,7 +29,8 @@ title: Demuxed 2020
       iframe.setAttribute('height', height - 100); // subtract a bit for the top nav and bottom footer
     }
   }
-  iframe.setAttribute('src', 'https://live-2020-demuxed-com-git-lets-go.demuxed.vercel.app/' + search);
+  iframe.setAttribute('src', 'https://live-2020-demuxed-com-git-dj-safari-auth.demuxed.vercel.app/' + search);
+  // iframe.setAttribute('src', 'http://localhost:3000/' + search);
   section.appendChild(iframe);
 
   setHeight();
