change wording from watch live

--- a/source/_header.haml
+++ b/source/_header.haml
@@ -7,7 +7,7 @@
     %nav#js-main-nav.page-head__nav
       %ul
         %li.nav-item
-          = link_to "Watch live!", "/live"
+          = link_to "Watch!", "/live"
         %li.nav-item
           = link_to "Why watch", "/#why-watch"
         %li.nav-item
