--- a/source/index.html.haml
+++ b/source/index.html.haml
@@ -13,7 +13,7 @@ title: Demuxed 2020
         October 27th-29th 2020, The Internet.
       %div.hero__btn-group
         = link_to "Buy tickets", "https://tickets.demuxed.com", :class => "hero__btn buy-tickets"
-        = link_to "Watch Live!", "/live", :class => "hero__btn mailing-list"
+        = link_to "Watch!", "/live", :class => "hero__btn mailing-list"
 
     = image_tag "/images/svg/hero-mobile.svg", :alt => "", :class => "hero__img-mobile"
     = image_tag "/images/svg/top-bg.svg", :alt => "", :class => "hero__img"
@@ -24,19 +24,19 @@ title: Demuxed 2020
     %div.why-text
       %h2.section-heading
         Why watch?
-      
+
       %ul.why__list
         %li.no-marketing
           %h3 No marketing, ever.
           %p Speakers are selected based on their submission, not how much money their company paid; we will never, ever sell a speaking slot. Attendee information isn't for sale either, and that includes any sponsors.
         %li.affordable
           %h3 Affordable.
-          %p We want anyone in the industry to be able to come, which means keeping tickets reasonably priced (thanks largely to our generous sponsors). We also offer free and discounted tickets to students and open source contributors, so please reach out if you're interested.       
+          %p We want anyone in the industry to be able to come, which means keeping tickets reasonably priced (thanks largely to our generous sponsors). We also offer free and discounted tickets to students and open source contributors, so please reach out if you're interested.
         %li.for-everyone
           %h3 For everyone in the community.
           %p
             Our community is dedicated to providing an inclusive, enjoyable experience for everyone in the video industry. In this pursuit, and in keeping with our love for reasonable standards, we adopted the Ada Initiative's
-            
+
             %a{href:"https://demuxed.com/code-of-conduct"} code of conduct.
 
     = image_tag "/images/svg/why-watch-mobile.svg", :alt => "", :class => "why-img__mobile"
