Remove ticket links, add youtube links

--- a/source/_header.haml
+++ b/source/_header.haml
@@ -7,8 +7,6 @@
     %nav#js-main-nav.page-head__nav
       %ul
         %li.nav-item
-          = link_to "Watch!", "/live"
-        %li.nav-item
           = link_to "Why watch", "/#why-watch"
         %li.nav-item
           = link_to "Speakers", "/#speakers"
@@ -19,4 +17,4 @@
         %li.nav-item
           = link_to "Sponsors", "/#sponsors"
         %li.nav-item
-          = link_to "Buy tickets", "https://tickets.demuxed.com"
+          = link_to "Videos", "https://www.youtube.com/playlist?list=PLkyaYNWEKcOcDlGjEbpxBe4woCJGHrarN"
