--- a/source/index.html.haml
+++ b/source/index.html.haml
@@ -12,8 +12,7 @@ title: Demuxed 2020
       %h1.hero__sub-heading
         October 27th-29th 2020, The Internet.
       %div.hero__btn-group
-        = link_to "Buy tickets", "https://tickets.demuxed.com", :class => "hero__btn buy-tickets"
-        = link_to "Watch!", "/live", :class => "hero__btn mailing-list"
+        = link_to "Videos", "https://www.youtube.com/playlist?list=PLkyaYNWEKcOcDlGjEbpxBe4woCJGHrarN", :class => "hero__btn buy-tickets"
 
     = image_tag "/images/svg/hero-mobile.svg", :alt => "", :class => "hero__img-mobile"
     = image_tag "/images/svg/top-bg.svg", :alt => "", :class => "hero__img"
